--- a/How-It-Works.html
+++ b/How-It-Works.html
@@ -12,14 +12,14 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a><img class="d-block w-40" src="park me.jpeg" height="50px" alt="park me"/></a>
+  <a href="index.html"><img class="d-block w-40" src="park me.jpeg" height="50px" alt="park me"></a>
   <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item">
-        <a class="nav-link" href="#">How it works </a>
+        <a class="nav-link" href="How-It-works.html">How it works </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Find my Parking</a>
+        <a class="nav-link" href="map.html">Find my Parking</a>
       </li>
          </ul>
     
@@ -140,7 +140,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="https://lh3.googleusercontent.com/proxy/gaEuT3konZNRsOJbT1mNL6YRVVgL1Pe1YnIb-QA3trFRLnBpIoMeUeh9SArl1Pkm_6LacHGQP4rPQ5YKh06j8srYUEZD2SQFfwJWtE11bmluvUnBm79_b_6GzJuF" class="card-img-top" alt="...">
+          <img src="3.jpg" style="height: 284px ;" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Step 3: Check in and park </h5>
             <p class="card-text">At the time of your reservation, head to your chosen location. You can easily check- in at the parking garage from your smartphone.</p>
