--- a/index.html
+++ b/index.html
@@ -166,14 +166,14 @@
             <img src="Parking6.jpg" class="float-left" />
             <h4>Pick your Parking spot</h4>
             <p>
-              Parking Finder site is to help you to change your attention from the significances of 
+              Park Me site is to help you to change your attention from the significances of 
               finding parking to getting on with experiencing the best of the rest of your day.
             </p>
         </h2>
         <div id="Enjoy-hassle-free-parking" class="Enjoy-hassle-free-parking">
             <img src="using phone.jpg" class="float-right" />
             <h4>Enjoy hassle-free parking.</h4>
-            <p>With the Parking Finder site, 
+            <p>With the Park Me site, 
               you will find available parking spots that are ideally located. 
               The Parking Finder site gives you a perfect overview of parking spots close to your destination. 
               Parking Finder not only saves you time but allows you to plan every trip with ease and confidence.
@@ -185,6 +185,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
+<script src="script.js"></script>
 
 <div class="footer">
   <h5>
