--- a/map.html
+++ b/map.html
@@ -11,7 +11,7 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a><img class="d-block w-40" src="park me.jpeg" height="50px" alt="park me"/></a>
+  <a href="index.html"><img class="d-block w-40" src="park me.jpeg" height="50px" alt="park me"></a>
   <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item">
@@ -469,7 +469,7 @@
       infoPane.classList.add("open");
     }
   </script>
-
+<script src="script.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAYAisHYPEd-ctlO0ReVyA2IlFLkrWbRIE&libraries=places&callback=initMap">
   </script>
 </body>
